tests/error/modifier_errors/bad_custom_call.err
Error: Dagger constraint violation (at $FILE:9:4)
  | 
7 | @guppy(daggerable=True)
8 | def test(x: qubit @owned) -> None:
9 |     measure(x)
  |     ^^^^^^^^^^ This function cannot be called in a daggerable context
  |                because it is not daggerable itself

Guppy compilation failed due to 1 previous error
